# eb

./: .gitignore  CMakeLists.txt
cmake/: config.h.cmake  config.h.in
doc/: eb.html.in  ebappendix.html.in  ebfont.html.in  ebinfo.html.in  ebrefile.html.in  ebstopcode.html.in  ebzip.html.in  html-split
eb/: CMakeLists.txt  booklist.c  build-post.h.in  build-pre.h  eb.def  strcasecmp.c  zio.h
eb/cmake/: eb.rc.in  sysdefs.h.in
ebappendix/: CMakeLists.txt
ebfont/: CMakeLists.txt
ebinfo/: CMakeLists.txt
ebrefile/: CMakeLists.txt  ebrefile.c
ebstopcode/: CMakeLists.txt
ebwin/: CMakeLists.txt
ebzip/: CMakeLists.txt  ebzip.h
libebutils/: CMakeLists.txt  strcasecmp.c
po-eb/: ja.po
po-ebutils/: ja.po
samples/: CMakeLists.txt  appendix.c  booklist.c  disctype.c  font.c  initexit.c  subbook.c  text.c  word.c
